# cavr-robotics

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: ci.yml  release.yml
adapters/file_camera/: CMakeLists.txt  README.md
adapters/file_camera/include/cavr/adapters/file_camera/: file_camera_adapter.hpp  netpbm.hpp
adapters/file_robot/: CMakeLists.txt  README.md
adapters/generic_tcp_robot/: CMakeLists.txt  README.md
adapters/generic_tcp_robot/include/cavr/adapters/generic_tcp_robot/: generic_tcp_controller.hpp  protocol.hpp  tcp_connection.hpp
adapters/generic_tcp_robot/src/: tcp_connection.cpp
adapters/mock_camera/: CMakeLists.txt  README.md
adapters/mock_camera/include/cavr/adapters/mock_camera/: mock_camera.hpp
adapters/mock_robot/: CMakeLists.txt  README.md
adapters/mock_robot/include/cavr/adapters/mock_robot/: mock_controller.hpp
adapters/opencv_camera/: CMakeLists.txt  README.md
adapters/robodk/: CMakeLists.txt  README.md
apps/cavr-convert/: CMakeLists.txt  README.md  main.cpp
apps/cavr-inspect/: CMakeLists.txt  README.md  main.cpp
apps/cavr-play/: CMakeLists.txt  main.cpp
apps/cavr-record/: CMakeLists.txt  README.md  main.cpp
apps/cavr-robotd/: CMakeLists.txt  README.md  main.cpp
apps/cavr-studio/: CMakeLists.txt  cavr_studio.qrc
apps/cavr-studio/qml/: RobotViewport.qml
apps/cavr-studio/src/: CameraView.cpp  CameraView.hpp  RobotController.cpp  RobotController.hpp  SceneViewport.cpp  SceneViewport.hpp  StudioWindow.cpp  StudioWindow.hpp  TimelineWidget.cpp  TimelineWidget.hpp  main.cpp
apps/cavr-validate/: CMakeLists.txt  README.md  main.cpp
apps/twin-convert/: README.md
apps/twin-inspect/: CMakeLists.txt  README.md
apps/twin-play/: README.md
apps/twin-record/: README.md
apps/twin-validate/: README.md
assets/: README.md
assets/robots/yaskawa_gp25/: README.md  gp25.glb  gp25.kinematics.json
cmake/: README.md
datasets/: README.md
datasets/demo_csv/: poses.csv  session.json
docs/: CI_CD.md  PROJECT_STATE.md  README.md
examples/: README.md
libs/adapter_sdk/: CMakeLists.txt  README.md
libs/adapter_sdk/include/cavr/adapter_sdk/: camera_adapter.hpp  camera_frame.hpp  controller_adapter.hpp  robot_state.hpp
libs/calibration/: CMakeLists.txt  README.md
libs/calibration/include/twinreplay/calibration/: .gitkeep
libs/catalog/: CMakeLists.txt  README.md
libs/catalog/include/cavr/catalog/: catalog.hpp  in_memory_catalog.hpp  sqlite_catalog.hpp
libs/catalog/src/: sqlite_catalog.cpp
libs/core/: CMakeLists.txt  README.md
libs/core/include/cavr/core/: geometry.hpp  time.hpp
libs/fault_injection/: CMakeLists.txt  README.md
libs/frame_graph/: CMakeLists.txt  README.md
libs/machine/: CMakeLists.txt  README.md
libs/machine/include/cavr/machine/: enums.hpp  frames.hpp  ik.hpp  json.hpp  kinematics.hpp  machine_profile.hpp  motion.hpp  profile_io.hpp
libs/record/: CMakeLists.txt  README.md
libs/record/include/cavr/record/: copy.hpp  json_recording.hpp  reader.hpp  recording.hpp  writer.hpp
libs/replay/: CMakeLists.txt  README.md
libs/replay/include/cavr/replay/: interpolation.hpp  scheduler.hpp  session.hpp  session_loader.hpp
libs/runtime/: CMakeLists.txt  README.md
libs/runtime/include/cavr/runtime/: camera_recording.hpp  catalog_index.hpp  demo_plan.hpp  record_session.hpp  session.hpp  session_io.hpp  session_manager.hpp  session_recorder.hpp  timeline.hpp
libs/storage_mcap/: CMakeLists.txt  README.md
libs/storage_mcap/include/cavr/storage_mcap/: mcap_recording.hpp
libs/storage_mcap/src/: mcap_recording.cpp
libs/time/: CMakeLists.txt  README.md
libs/transport/: CMakeLists.txt  README.md
libs/validation/: CMakeLists.txt  README.md
libs/validation/include/cavr/validation/: trajectory_validator.hpp
libs/visualization/: CMakeLists.txt
libs/visualization/include/cavr/visualization/: robot_model.hpp  scene_model.hpp
schemas/: README.md
scripts/: README.md
scripts/assets/: README.md  blender_build_gp25.py  freecad_export_gp25_links.py
tests/: CMakeLists.txt  README.md  catalog_test.cpp  core_domain_types_test.cpp  file_camera_test.cpp  generic_tcp_robot_test.cpp  machine_frames_test.cpp  machine_ik_test.cpp  record_copy_test.cpp  record_recording_test.cpp  replay_csv_session_test.cpp  replay_interpolation_test.cpp  replay_scheduler_test.cpp  runtime_camera_recording_test.cpp  runtime_catalog_index_test.cpp  runtime_session_recorder_test.cpp  runtime_session_recording_test.cpp  runtime_workflow_test.cpp  storage_mcap_recording_test.cpp  visualization_robot_model_test.cpp
